--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@reduxjs/toolkit": "^2.2.5",
     "aos": "^2.3.4",
     "axios": "^1.7.1",
     "dotenv": "^16.4.5",
@@ -20,6 +21,7 @@
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^9.10.3",
     "react-modal": "^3.16.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
