--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
+    "react-type-animation": "^3.2.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
