--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,11 +4,6 @@ on:
   push:
     branches:
       - master  
-  pull_request:
-    branches:
-      - main  
-    types:
-      - closed  
 
 jobs:
   deploy:
@@ -18,6 +13,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Debug SSH Key (Optional, for Debugging)
+      run: echo "${{ secrets.SSH_PRIVATE_KEY }}"
+
     - name: Set up SSH
       uses: webfactory/ssh-agent@v0.5.3
       with:
@@ -25,7 +23,11 @@ jobs:
 
     - name: Install dependencies and restart frontend
       run: |
-        ssh -q -o StrictHostKeyChecking=no root@${{ secrets.SNOWTAIL_IP }} << 'EOF'
+        ssh -v -q -o StrictHostKeyChecking=no root@${{ secrets.SNOWTAIL_IP }} << 'EOF'
           set -e
           cd ~/frontend/snowtail_frontend
+          git reset --hard
+          git pull
+          npm install
+          npm run build
         EOF
