--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@iconify/react": "^5.1.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
