--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,6 +34,7 @@ jobs:
           cd ~/frontend/snowtail_frontend
           git reset --hard
           git pull
+          nvm use 20
           npm install
           npm run build
         EOF
